[package]
name = "bluechi"
version = "0.1.0"
authors = [
    "Douglas Schilling Landgraf <dougsland@redhat.com>",
]
description = "BlueChi Rust module"
repository = "https://github.com/containers/bluechi"
readme = "README.md"
license = "LGPLv2"
categories = ["os::unix-apis"]
keywords = ["linux", "systemd", "dbus"]
edition = "2021"

[dependencies]
dbus = { version = "0.9.7", features = [] }
