[metadata]
description_file = README.md

[flake8]
max-line-length = 120
exclude = venv, .venv
ignore = F401

[mypy]
python_version = 3.9
disallow_subclassing_any = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_incomplete_stub = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True
